--- a/recipe.html
+++ b/recipe.html
@@ -19,7 +19,8 @@
     <link rel='stylesheet' href='css/shortcodes.css' type='text/css' media='all' />
     <link rel='stylesheet' href='css/theme.css' type='text/css' media='all' />
     <link rel='stylesheet' href='js/vendor/woo/plugin.woocommerce.css' type='text/css' media='all' />
-    <link rel='stylesheet' href='css/custom.css' type='text/css' media='all' />
+    <link rel='stylesheet' href='css/custom.css' type='text/css' media='all' /> 
+    <link rel='stylesheet' href='css/modern-redesign.css' type='text/css' media='all' />
     <link rel='stylesheet' href='css/responsive.css' type='text/css' media='all' />
     <link rel="stylesheet" href='css/custom-styles.css' type='text/css' media='all'/>
 </head>
