--- a/recipes.html
+++ b/recipes.html
@@ -15,6 +15,7 @@
     <link rel='stylesheet' href='css/theme.css' type='text/css' media='all' />
     <link rel='stylesheet' href='js/vendor/woo/plugin.woocommerce.css' type='text/css' media='all' />
     <link rel='stylesheet' href='css/custom.css' type='text/css' media='all' /> 
+    <link rel='stylesheet' href='css/modern-redesign.css' type='text/css' media='all' />
     <link rel='stylesheet' href='css/responsive.css' type='text/css' media='all' />
     <link rel='stylesheet' href='js/vendor/comp/comp.min.css' type='text/css' media='all' />
     <link rel='stylesheet' href='js/vendor/swiper/swiper.css' type='text/css' media='all' />
