--- a/contacts.html
+++ b/contacts.html
@@ -181,25 +181,7 @@
                                     <li>
                                         <div class="widget woocommerce widget_shopping_cart">
                                             <div class="hide_cart_widget_if_empty">
-                                                <div class="widget_shopping_cart_content">
-                                                    <div class="cart-header">
-                                                        <h3>Shopping Cart</h3>
-                                                        <span class="cart-count">0</span>
-                                                    </div>
-                                                    <div class="cart-body">
-                                                        <p class="woocommerce-mini-cart__empty-message">No products in the cart.</p>
-                                                    </div>
-                                                    <div class="cart-footer">
-                                                        <div class="cart-total">
-                                                            <span class="total-label">Total:</span>
-                                                            <span class="total-amount">$0.00</span>
-                                                        </div>
-                                                        <div class="cart-buttons">
-                                                            <a href="cart.html" class="view-cart-button">View Cart</a>
-                                                            <a href="checkout.html" class="checkout-button">Checkout</a>
-                                                        </div>
-                                                    </div>
-                                                </div>
+                                                <div class="widget_shopping_cart_content"></div>
                                             </div>
                                         </div>
                                     </li>
