--- a/contacts.html
+++ b/contacts.html
@@ -161,10 +161,13 @@
                     <div class="content_wrap">
                         <div class="columns_wrap columns_fluid">
                             <div class="column-4_5 contact_logo">
-                                <div class="logo">
-                                    <a href="index.html">
-                                        <img src="images/tarmonia-new-tag.png" class="logo_main" alt="" width="239" height="59">
+                                <div class="logo" style="display:flex;align-items:center;gap:15px;">
+                                    <a href="index.html" style="flex-shrink:0;">
+                                        <img src="images/big-logo.png" class="logo_main" alt="" width="74" height="74">
                                     </a>
+                                    <div style="background:#fff;padding:12px 18px;border-radius:6px;box-shadow:0 2px 8px rgba(0,0,0,0.1);">
+                                        <span style="font-size:18px;font-weight:900;color:#231f20;letter-spacing:1px;">TARMONIA</span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="column-1_5 contact_field contact_cart">
@@ -210,8 +213,13 @@
         <div class="header_mobile">
             <div class="content_wrap">
                 <div class="menu_button icon-menu"></div>
-                <div class="logo">
-                    <a href="index.html"><img src="images/tarmonia-tag.png" class="logo_main" alt="" width="239" height="59"></a>
+                <div class="logo" style="display:flex;align-items:center;gap:15px;">
+                    <a href="index.html" style="flex-shrink:0;">
+                        <img src="images/big-logo.png" class="logo_main" alt="" width="74" height="74">
+                    </a>
+                    <div style="background:#fff;padding:12px 18px;border-radius:6px;box-shadow:0 2px 8px rgba(0,0,0,0.1);">
+                        <span style="font-size:18px;font-weight:900;color:#231f20;letter-spacing:1px;">TARMONIA</span>
+                    </div>
                 </div>
             </div>
             <div class="side_wrap">
