--- a/about-2.html
+++ b/about-2.html
@@ -111,10 +111,13 @@
                     <div class="content_wrap">
                         <div class="columns_wrap columns_fluid">
                             <div class="column-4_5 contact_logo">
-                                <div class="logo">
-                                    <a href="index.html">
-                                        <img src="images/tarmonia-new-tag.png" class="logo_main" alt="" width="239" height="59">
+                                <div class="logo" style="display:flex;align-items:center;gap:15px;">
+                                    <a href="index.html" style="flex-shrink:0;">
+                                        <img src="images/big-logo.png" class="logo_main" alt="" width="74" height="74">
                                     </a>
+                                    <div class="logo-text-box">
+                                        <span>TARMONIA</span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="column-1_5 contact_field contact_cart">
@@ -163,10 +166,13 @@
         <div class="header_mobile">
             <div class="content_wrap">
                 <div class="menu_button icon-menu"></div>
-                <div class="logo">
-                    <a href="index.html">
-                        <img src="images/tarmonia-tag.png" class="logo_main" alt="" width="239" height="59">
+                <div class="logo" style="display:flex;align-items:center;gap:15px;">
+                    <a href="index.html" style="flex-shrink:0;">
+                        <img src="images/big-logo.png" class="logo_main" alt="" width="74" height="74">
                     </a>
+                    <div class="logo-text-box">
+                        <span>TARMONIA</span>
+                    </div>
                 </div>
             </div>
             <div class="side_wrap">
@@ -191,6 +197,10 @@
         </div>
         <div class="top_panel_title top_panel_style_1  title_present breadcrumbs_present scheme_original">
             <div  class="bg_cust_2 top_panel_title_inner top_panel_inner_style_1  title_present_inner breadcrumbs_present_inner">
+                <div class="fresh-from-farm-overlay">
+                    <h1>Fresh From The Farm</h1>
+                    <div class="accent-line"></div>
+                </div>
                 <!-- <div class="content_wrap">
                     <h1 class="page_title">About Us</h1>
                     <div class="breadcrumbs">
