--- a/login.html
+++ b/login.html
@@ -34,7 +34,14 @@
             <div class="content_wrap">
               <div class="columns_wrap columns_fluid">
                 <div class="column-4_5 contact_logo">
-                  <div class="logo"><a href="index.html"><img src="images/tarmonia-new-tag.png" class="logo_main" alt="Tarmonia" width="239" height="59" /></a></div>
+                  <div class="logo" style="display:flex;align-items:center;gap:15px;">
+                    <a href="index.html" style="flex-shrink:0;">
+                      <img src="images/big-logo.png" class="logo_main" alt="Tarmonia" width="74" height="74" />
+                    </a>
+                    <div class="logo-text-box">
+                      <span>TARMONIA</span>
+                    </div>
+                  </div>
                 </div>
                 <div class="column-1_5 contact_field contact_cart">
                   <div class="header_actions" style="display:flex;align-items:center;gap:20px;justify-content:flex-end;">
