--- a/contacts.html
+++ b/contacts.html
@@ -202,7 +202,7 @@
             left: 50% !important;
             top: 0 !important;
             transform: translate(-50%, -60%) !important;
-            z-index: 2147483646 !important;
+            z-index: auto !important;
             overflow: visible !important;
             pointer-events: auto !important;
         }
@@ -237,7 +237,7 @@
             gap: 20px;
             width: min(1100px, 90%);
             pointer-events: auto;
-            z-index: 2147483647;
+            z-index: auto;
             /* Smooth movement when script updates `top`/`transform` */
             transition: top 280ms cubic-bezier(.2,.9,.2,1), transform 280ms cubic-bezier(.2,.9,.2,1), opacity 220ms ease;
         }
