--- a/about-2.html
+++ b/about-2.html
@@ -197,9 +197,9 @@
         </div>
         <div class="top_panel_title top_panel_style_1  title_present breadcrumbs_present scheme_original">
             <div  class="bg_cust_2 top_panel_title_inner top_panel_inner_style_1  title_present_inner breadcrumbs_present_inner">
-                <div class="fresh-from-farm-overlay">
-                    <h1>Fresh From The Farm</h1>
-                    <div class="accent-line"></div>
+                <div class="fresh-from-farm-overlay" style="animation: fadeInUp 1s ease-out 0.2s both;">
+                    <h1 style="animation: fadeInUp 1s ease-out 0.4s both, glow 4s ease-in-out 1.4s infinite;">Fresh From The Farm</h1>
+                    <div class="accent-line" style="animation: scaleAccent 0.8s ease-out 0.8s both;"></div>
                 </div>
                 <!-- <div class="content_wrap">
                     <h1 class="page_title">About Us</h1>
