--- a/contacts.html
+++ b/contacts.html
@@ -321,8 +321,8 @@
                                     <a href="index.html" style="flex-shrink:0;">
                                         <img src="images/big-logo.png" class="logo_main" alt="" width="74" height="74">
                                     </a>
-                                    <div style="background:#fff;padding:12px 18px;border-radius:6px;box-shadow:0 2px 8px rgba(0,0,0,0.1);">
-                                        <span style="font-size:18px;font-weight:900;color:#231f20;letter-spacing:1px;">TARMONIA</span>
+                                    <div class="logo-text-box">
+                                        <span>TARMONIA</span>
                                     </div>
                                 </div>
                             </div>
@@ -373,8 +373,8 @@
                     <a href="index.html" style="flex-shrink:0;">
                         <img src="images/big-logo.png" class="logo_main" alt="" width="74" height="74">
                     </a>
-                    <div style="background:#fff;padding:12px 18px;border-radius:6px;box-shadow:0 2px 8px rgba(0,0,0,0.1);">
-                        <span style="font-size:18px;font-weight:900;color:#231f20;letter-spacing:1px;">TARMONIA</span>
+                    <div class="logo-text-box">
+                        <span>TARMONIA</span>
                     </div>
                 </div>
             </div>
@@ -652,6 +652,9 @@
                                     <a href="index.html">
                                         <img src="images/big-logo.png" class="logo_main" alt="" width="74" height="74">
                                     </a>
+                                    <div class="logo-text-box">
+                                        <span>TARMONIA</span>
+                                    </div>
                                 </div>
                             </div>
                         </aside>
