--- a/classic.html
+++ b/classic.html
@@ -303,20 +303,23 @@
                                     <a href="index.html">
                                         <img src="images/big-logo.png" class="logo_main" alt="" width="74" height="74">
                                     </a>
+                                    <div class="logo-text-box">
+                                        <span>TARMONIA</span>
+                                    </div>
                                 </div>
                             </div>
                         </aside>
                         <aside class="column-1_4 widget widget_text">
                             <div class="textwidget">
-                                B-3-13, Pusat Perdagangan, 1B, Jalan SS 8/39, Icon City, 47300 Petaling Jaya, Selangor
-                                <br>
-                                <span class="accent1">Phone: 123-456-7890</span>
-                                <br> Fax: 010-927 7092
-                                <br> Email: help@conebyte.com
+                                <span class="accent1">Address</span>: B-3-13, Pusat Perdagangan, 1B, Jalan SS 8/39, Icon City, 47300 Petaling Jaya, Selangor
                             </div>
                         </aside>
-                        <aside class="column-1_4 widget widget_text">
-                            <div class="textwidget"></div>
+                        <aside class="column-1_4 widget widget_text centered-contact">
+                            <div class="textwidget">
+                                <span class="accent1">Phone: 123-456-7890</span>
+                                <br> Fax: 010-927 7092
+                                <br><span class="contact-email">Email:<a href="mailto:info@tarmonia.com">info@tarmonia.com</a></span>
+                            </div>
                         </aside>
                         <aside class="column-1_4 widget widget_socials">
                             <div class="widget_inner">
@@ -343,6 +346,7 @@
                                     </div>
                                 </div>
                             </div>
+
                         </aside>
                     </div>
                 </div>
