--- a/login.html
+++ b/login.html
@@ -91,7 +91,18 @@
         <div class="footer_wrap_inner widget_area_inner">
           <div class="content_wrap">
             <div class="columns_wrap">
-              <aside class="column-1_4 widget widget_nav_menu"><h4 class="widget_title">Navigate</h4><ul class="menu"><li class="menu-item"><a href="index.html">Home</a></li><li class="menu-item"><a href="shop.html">Products</a></li><li class="menu-item"><a href="recipes.html">Recipes</a></li></ul></aside>
+              <aside class="column-1_4 widget widget_nav_menu"><h4 class="widget_title">On the Farm</h4>
+                <div class="menu-footer-menu-1-container"><ul id="menu-footer-menu-1" class="menu"><li class="menu-item"><a href="farm.html">Meet Our Farmers</a></li><li class="menu-item"><a href="recipes.html">Meet the Cows</a></li><li class="menu-item"><a href="cobbles.html">Famous Dairy Facts</a></li></ul></div>
+              </aside>
+              <aside class="column-1_4 widget widget_nav_menu"><h4 class="widget_title">In the Kitchen</h4>
+                <div class="menu-footer-menu-2-container"><ul id="menu-footer-menu-2" class="menu"><li class="menu-item"><a href="recipes.html">Recipes</a></li><li class="menu-item"><a href="masonry-2-columns.html">Lactose Intolerance</a></li></ul></div>
+              </aside>
+              <aside class="column-1_4 widget widget_socials">
+                <div class="widget_inner"><div class="logo"><a href="index.html"><img src="images/big-logo.png" class="logo_main" alt="" width="74" height="74"></a><div class="logo-text-box"><span>TARMONIA</span></div></div></div>
+              </aside>
+              <aside class="column-1_4 widget widget_text centered-contact">
+                <div class="textwidget"><span class="accent1">Phone: 123-456-7890</span><br> Fax: 010-927 7092<br><span class="contact-email">Email:<a href="mailto:info@tarmonia.com">info@tarmonia.com</a></span></div>
+              </aside>
             </div>
           </div>
         </div>
