--- a/single-post.html
+++ b/single-post.html
@@ -30,50 +30,52 @@
         }
         
         .content_wrap {
-            display: flex;
-            flex-direction: column;
-        }
-        
-        .content {
-            order: 1;
-            width: 100%;
-        }
-    }
-    </style>
-
-</head>
-
-<body class="post-template-default single single-post single-format-standard body_style_wide body_filled article_style_stretch layout_single-standard template_single-standard scheme_original top_panel_show top_panel_above sidebar_show sidebar_right sidebar_outer_hide vc_responsive">
-
-<a id="toc_home" class="sc_anchor" title="Home" data-description="&lt;i&gt;Return to Home&lt;/i&gt; - &lt;br&gt;navigate to home page of the site" data-icon="icon-home" data-url="index.html" data-separator="yes"></a>
-<a id="toc_top" class="sc_anchor" title="To Top" data-description="&lt;i&gt;Back to top&lt;/i&gt; - &lt;br&gt;scroll to top of the page" data-icon="icon-double-up" data-url="" data-separator="yes"></a>
-
-<div class="body_wrap">
-    <div class="page_wrap">
-        <div class="top_panel_fixed_wrap"></div>
-        <header class="top_panel_wrap top_panel_style_1 scheme_original">
-            <div class="top_panel_wrap_inner top_panel_inner_style_1 top_panel_position_above">
-                <div class="top_panel_top">
-                    <div class="content_wrap clearfix">
-                        <div class="top_panel_top_contact_area icons icon-phone-1">1(800)-456-789 </div>
-                        <div class="top_panel_top_open_hours icons icon-clock-1">Mn-Fr: 8am - 8pm, St-Sn: 8am - 4pm</div>
-                        <div class="top_panel_top_user_area">
-                            <div class="top_panel_top_socials">
-                                <div class="sc_socials sc_socials_type_icons sc_socials_shape_square sc_socials_size_tiny">
-                                    <div class="sc_socials_item">
-                                        <a href="#" target="_blank" class="social_icons social_twitter">
-                                            <span class="icon-twitter"></span>
+            </div>
+            </footer>
+            <footer class="footer_wrap widget_area scheme_original">
+                <div class="footer_wrap_inner widget_area_inner">
+                    <div class="content_wrap">
+                        <div class="columns_wrap">
+                            <aside class="column-1_4 widget widget_socials">
+                                <div class="widget_inner">
+                                    <div class="logo">
+                                        <a href="index.html">
+                                            <img src="images/big-logo.png" class="logo_main" alt="" width="74" height="74">
                                         </a>
                                     </div>
-                                    <div class="sc_socials_item">
-                                        <a href="#" target="_blank" class="social_icons social_facebook">
-                                            <span class="icon-facebook"></span>
-                                        </a>
+                                    <div class="logo-text-box">
+                                        <a href="index.html">TARMONIA</a>
                                     </div>
-                                    <div class="sc_socials_item">
-                                        <a href="#" target="_blank" class="social_icons social_gplus-1">
-                                            <span class="icon-gplus-1"></span>
-                                        </a>
+                                </div>
+                            </aside>
+                            <aside class="column-1_4 widget widget_text">
+                                <div class="textwidget">
+                                    <strong class="accent1">Address:</strong>
+                                    <br>
+                                    B-3-13, Pusat Perdagangan, 1B, Jalan SS 8/39, Icon City, 47300 Petaling Jaya, Selangor
+                                </div>
+                            </aside>
+                            <aside class="column-1_4 widget widget_text centered-contact">
+                                <div class="textwidget">
+                                    <span class="accent1">Phone:</span> 123-456-7890<br>
+                                    <span class="accent1">Fax:</span> 010-927 7092<br>
+                                    <span class="contact-email">Email: <a href="mailto:info@tarmonia.com">info@tarmonia.com</a></span>
+                                </div>
+                            </aside>
+                            <aside class="column-1_4 widget widget_socials">
+                                <div class="widget_inner">
+                                    <div class="sc_socials sc_socials_type_icons sc_socials_shape_round sc_socials_size_tiny">
+                                        <div class="sc_socials_item"><a href="#" target="_blank" class="social_icons social_twitter"><span class="icon-twitter"></span></a></div>
+                                        <div class="sc_socials_item"><a href="#" target="_blank" class="social_icons social_facebook"><span class="icon-facebook"></span></a></div>
+                                        <div class="sc_socials_item"><a href="#" target="_blank" class="social_icons social_gplus-1"><span class="icon-gplus-1"></span></a></div>
+                                        <div class="sc_socials_item"><a href="#" target="_blank" class="social_icons social_linkedin"><span class="icon-linkedin"></span></a></div>
+                                    </div>
+                                </div>
+                            </aside>
+                        </div>
+                    </div>
+                </div>
+            </footer>
                                     </div>
                                     <div class="sc_socials_item">
                                         <a href="#" target="_blank" class="social_icons social_linkedin">
