--- a/single-product.html
+++ b/single-product.html
@@ -476,101 +476,41 @@
             <div class="footer_wrap_inner widget_area_inner">
                 <div class="content_wrap">
                     <div class="columns_wrap">
-                        <aside class="column-1_4 widget widget_nav_menu">
-                            <h4 class="widget_title">On the Farm</h4>
-                            <div class="menu-footer-menu-1-container">
-                                <ul id="menu-footer-menu-1" class="menu">
-                                    <li class="menu-item"><a href="farm.html">Meet Our Farmers</a></li>
-                                    <li class="menu-item"><a href="recipes.html">Meet the Cows</a></li>
-                                    <li class="menu-item"><a href="cobbles.html">Famous Dairy Facts</a></li>
-                                    <li class="menu-item"><a href="grid.html">From the Farm to the Fridge</a></li>
-                                    <li class="menu-item"><a href="contacts.html">Dairy Farm Map</a></li>
-                                    <li class="menu-item"><a href="classic.html">Farm Practices</a></li>
-                                </ul>
-                            </div>
-                        </aside>
-                        <aside class="column-1_4 widget widget_nav_menu">
-                            <h4 class="widget_title">In the Kitchen</h4>
-                            <div class="menu-footer-menu-2-container">
-                                <ul id="menu-footer-menu-2" class="menu">
-                                    <li class="menu-item"><a href="recipes.html">Recipes</a></li>
-                                    <li class="menu-item"><a href="masonry-2-columns.html">Lactose Intolerance</a></li>
-                                    <li class="menu-item current_page_parent "><a href="shop.html">Milk Imitators</a></li>
-                                    <li class="menu-item"><a href="portfolio-3-columns.html">Organic Milk</a></li>
-                                    <li class="menu-item"><a href="portfolio-2-columns.html">Flavored Milk</a></li>
-                                    <li class="menu-item"><a href="contacts.html">Ask Our Dietitian</a></li>
-                                </ul>
-                            </div>
-                        </aside>
-                        <aside class="column-1_4 widget widget_nav_menu">
-                            <h4 class="widget_title">In the News</h4>
-                            <div class="menu-footer-menu-3-container">
-                                <ul id="menu-footer-menu-3" class="menu">
-                                    <li class="menu-item"><a href="masonry-3-columns.html">Local Milk Blog</a></li>
-                                    <li class="menu-item"><a href="classic.html">Contests/Sweepstakes</a></li>
-                                    <li class="menu-item"><a href="cobbles.html">Videos</a></li>
-                                    <li class="menu-item"><a href="about-1.html">News Releases</a></li>
-                                    <li class="menu-item"><a href="about-2.html">Newsletters</a></li>
-                                </ul>
-                            </div>
-                        </aside>
-                        <aside class="column-1_4 widget widget_nav_menu">
-                            <h4 class="widget_title">About Us</h4>
-                            <div class="menu-footer-menu-4-container">
-                                <ul id="menu-footer-menu-4" class="menu">
-                                    <li class="menu-item"><a href="contacts.html">FAQ</a></li>
-                                    <li class="menu-item"><a href="farm.html">Our Board</a></li>
-                                    <li class="menu-item"><a href="about-2.html">Our Staff</a></li>
-                                    <li class="menu-item"><a href="contacts.html">Contact Us</a></li>
-                                </ul>
-                            </div>
-                        </aside>
                         <aside class="column-1_4 widget widget_socials">
                             <div class="widget_inner">
                                 <div class="logo">
                                     <a href="index.html">
-									<img src="images/big-logo.png" class="logo_main" alt="" width="74" height="74">
-									</a>
+                                        <img src="images/big-logo.png" class="logo_main" alt="" width="74" height="74">
+                                    </a>
+                                </div>
+                                <div class="logo-text-box">
+                                    <a href="index.html">TARMONIA</a>
                                 </div>
                             </div>
-
                         </aside>
                         <aside class="column-1_4 widget widget_text">
-                            <div class="textwidget">888 Broadway, New York, NY, 18813
+                            <div class="textwidget">
+                                <strong class="accent1">Address:</strong>
                                 <br>
-                                <span class="accent1">Phone: 123-456-7890</span>
-                                <br> Fax: 123-456-7890
-                                <br> Email: info@yoursite.com</div>
+                                B-3-13, Pusat Perdagangan, 1B, Jalan SS 8/39, Icon City, 47300 Petaling Jaya, Selangor
+                            </div>
                         </aside>
-                        <aside class="column-1_4 widget widget_text">
-                            <div class="textwidget"></div>
+                        <aside class="column-1_4 widget widget_text centered-contact">
+                            <div class="textwidget">
+                                <span class="accent1">Phone:</span> 123-456-7890<br>
+                                <span class="accent1">Fax:</span> 010-927 7092<br>
+                                <span class="contact-email">Email: <a href="mailto:info@tarmonia.com">info@tarmonia.com</a></span>
+                            </div>
                         </aside>
                         <aside class="column-1_4 widget widget_socials">
                             <div class="widget_inner">
                                 <div class="sc_socials sc_socials_type_icons sc_socials_shape_round sc_socials_size_tiny">
-                                    <div class="sc_socials_item">
-                                        <a href="#" target="_blank" class="social_icons social_twitter">
-                                            <span class="icon-twitter"></span>
-                                        </a>
-                                    </div>
-                                    <div class="sc_socials_item">
-                                        <a href="#" target="_blank" class="social_icons social_facebook">
-                                            <span class="icon-facebook"></span>
-                                        </a>
-                                    </div>
-                                    <div class="sc_socials_item">
-                                        <a href="#" target="_blank" class="social_icons social_gplus-1">
-                                            <span class="icon-gplus-1"></span>
-                                        </a>
-                                    </div>
-                                    <div class="sc_socials_item">
-                                        <a href="#" target="_blank" class="social_icons social_linkedin">
-                                            <span class="icon-linkedin"></span>
-                                        </a>
-                                    </div>
+                                    <div class="sc_socials_item"><a href="#" target="_blank" class="social_icons social_twitter"><span class="icon-twitter"></span></a></div>
+                                    <div class="sc_socials_item"><a href="#" target="_blank" class="social_icons social_facebook"><span class="icon-facebook"></span></a></div>
+                                    <div class="sc_socials_item"><a href="#" target="_blank" class="social_icons social_gplus-1"><span class="icon-gplus-1"></span></a></div>
+                                    <div class="sc_socials_item"><a href="#" target="_blank" class="social_icons social_linkedin"><span class="icon-linkedin"></span></a></div>
                                 </div>
                             </div>
-
                         </aside>
                     </div>
                 </div>
